--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -34,7 +34,11 @@ jobs:
         run: | 
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          #pip install .
+
+      - name: Install pandoc
+        run: |
+          sudo apt update
+          sudo apt install pandoc
           
       - name: Build HTML
         run: | 
