--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ numpy>=1.24.3
 bayesian-optimization>=1.4.3
 drawsvg>=2.3.0
 zoopt>=0.4.2
-Pyarrow
-IPython
+pyarrow
+ipython
 sphinx
 furo
 nbsphinx
