--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -1,51 +1,52 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Build-sphinx-docs
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+  # Triggers the workflow on push or pull request events for main
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
-  # Allows you to run this workflow manually from the Actions tab
+  # Allows workflow to be manually run from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# Define build job
 jobs: 
-  # This workflow contains a single job called "build"
+
   build: 
-    # The type of runner that the job will run on
+    # Choose to run on ubuntu
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # Checks-out repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
+      # Create Python 3.11 environment
       - name: Set up Python 3.11
         uses: actions/setup-python@v2
         with:
            python-version: "3.11"
         
+      # Install all dependencies from requirements file and ghp-import
       - name: Install dependencies
         run: | 
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install ghp-import
 
+      # Pandoc install required for sphinx docs
       - name: Install pandoc
         run: |
           sudo apt update
           sudo apt install pandoc
-          
+        
+      # Run sphinx build from docs folder
       - name: Build HTML
         run: | 
           cd docs/
           make html
-          
+      
+      # Use ghp-import on build folder to export docs
       - name: Run ghp-import
         run: | 
           ghp-import -n -p -f docs/build/html
