--- a/.github/workflows/sphinx_deploy.yml
+++ b/.github/workflows/sphinx_deploy.yml
@@ -1,10 +1,9 @@
-name: Build-sphinx-docs
+# Used to build and deploy sphinx docs on submission to main
+name: Deploy-sphinx-docs
 
 on:
-  # Triggers the workflow on push or pull request events for main
+  # Triggers the workflow on push events for main
   push:
-    branches: [ main ]
-  pull_request:
     branches: [ main ]
 
   # Allows workflow to be manually run from the Actions tab
