--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,11 @@
 name: Python package
 
-on: [push]
-
+on:
+  push:
+    branches: [main, development]
+  pull_request:
+    branches: [main, development]
+        
 jobs:
   build:
 
