--- a/.github/workflows/sphinx_build.yml
+++ b/.github/workflows/sphinx_build.yml
@@ -1,5 +1,5 @@
 # Used to check docs can be built when pull requests are made
-name: Build-sphinx-docs
+name: Test Build Docs
 
 on:
   # Triggers the workflow on pull request events for main
@@ -36,7 +36,8 @@ jobs:
       - name: Install pandoc
         run: |
           sudo apt update
-          sudo apt install pandoc
+          wget https://github.com/jgm/pandoc/releases/download/3.1.12.2/pandoc-3.1.12.2-1-amd64.deb
+          sudo dpkg -i pandoc-2.9.2.1-1-amd64.deb
         
       # Run sphinx build from docs folder
       - name: Build HTML
