--- a/.github/workflows/sphinx_deploy.yml
+++ b/.github/workflows/sphinx_deploy.yml
@@ -36,8 +36,8 @@ jobs:
       # Pandoc install required for sphinx docs
       - name: Install pandoc
         run: |
-          sudo apt update
-          sudo apt install pandoc
+          wget https://github.com/jgm/pandoc/releases/download/3.1.12.2/pandoc-3.1.12.2-1-amd64.deb
+          sudo dpkg -i pandoc-3.1.12.2-1-amd64.deb
         
       # Run sphinx build from docs folder
       - name: Build HTML
