--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,14 +27,13 @@ jobs:
         with:
             python-version: ${{ matrix.python-version }}
 
-      # Install all dependencies from requirements file and ghp-import
+      # Install all dependencies from requirements file 
       - name: Install dependencies
         run: | 
             python -m pip install --upgrade pip
             pip install -r requirements.txt
-            pip install pytest
 
-      # Run with unittest
-      - name: Test with unittest
+      # Run with pytest
+      - name: Test with pytest
         run: |
-            python -m unittest discover -v -s "./tests" -p "*_test.py"
+            python -m pytest
