--- a/.github/workflows/sphinx_build.yml
+++ b/.github/workflows/sphinx_build.yml
@@ -4,7 +4,9 @@ name: Test Build Docs
 on:
   # Triggers the workflow on pull request events for main
   pull_request:
-    branches: [main, development]
+    branches:
+      - main
+      - release-*
 
   # Allows workflow to be manually run from the Actions tab
   workflow_dispatch:
