--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,13 @@ name: Tests
 
 on:
   push:
-    branches: [main, development]
+    branches: 
+      - main
+      - release-*
   pull_request:
-    branches: [main, development]
+    branches: 
+      - main
+      - release-*
 
   # Allows workflow to be manually run from the Actions tab
   workflow_dispatch:
