Set coverage bot to only run for 1 version of python - Also added omit to optimisation module, this is intentionally untested currently.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,9 @@ jobs:
 
       # Add comment with coverage report
       - name: Pytest coverage comment
+        if: ${{matrix.python-version == '3.11'}}
         uses: MishaKav/pytest-coverage-comment@main
         with:
           junitxml-path: ./report.xml
           pytest-xml-coverage-path: ./coverage.xml
+          remove-link-from-badge: true
