Additional comment details in yml

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,9 +41,9 @@ jobs:
         run: |
             pytest --junitxml=report.xml --cov --cov-report=term-missing:skip-covered --cov-report xml:coverage.xml
 
-      # Add comment with coverage report
+      # Add comment to PR with coverage report
       - name: Pytest coverage comment
-        if: ${{matrix.python-version == '3.11'}}
+        if: ${{ matrix.python-version == '3.11' }}
         uses: MishaKav/pytest-coverage-comment@main
         with:
           junitxml-path: ./report.xml
