Update python_publish workflow to use trusted publishing
Also configured to deploy into pypi environment

--- a/.github/workflows/python_publish.yml
+++ b/.github/workflows/python_publish.yml
@@ -13,6 +13,9 @@ jobs:
   deploy:
 
     runs-on: ubuntu-latest
+    environment: pypi
+    permissions: # Needed for trusted publishing
+        id-token: write
 
     steps:
     - uses: actions/checkout@v4
@@ -29,8 +32,6 @@ jobs:
         
     - name: Build package
       run: python -m build
+      
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@release/v1.8
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
