--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,5 +78,4 @@ skip-magic-trailing-comma = false
 line-ending = "auto"
 
 [tool.ruff.lint.per-file-ignores]
-"*_test.py" = ["ANN", "S101"]
-"tests/*" = ["PERF"]
+"tests/*" = ["PERF", "ANN", "S101"]
