Added EM102 & EM103 rules to check for formatted strings in exceptions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ convention = "google"
 preview = true
 select = [
     "E", "F", "W", "N", "D", "B", "CPY", "TRY", "PLE", "PLW", "YTT", "ANN", "S",
-    "Q", "SIM", "ARG", "PERF", "I"
+    "Q", "SIM", "ARG", "PERF", "I", "EM102", "EM103"
 ]
 fixable = ["ALL"]
 ignore = [
