--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ ignore_missing_imports = true
 exclude = [
     "venv",
     "docs",
-    "setup.py"
+    "setup.py",
+    "*.ipynb"
 ]
 line-length = 80
 indent-width = 4
@@ -45,7 +46,8 @@ convention = "google"
 preview = true
 select = [
     "E", "F", "W", "N", "D", "B", "CPY", "TRY", "PLE", "PLW", "YTT", "ANN", "S",
-    "Q", "SIM", "ARG", "PERF", "I", "EM102", "EM103", "RET"
+    "Q", "SIM", "ARG", "PERF", "I", "EM102", "EM103", "RET", "FURB148", 
+    "FURB168", "RUF"
 ]
 fixable = ["ALL"]
 ignore = [
@@ -65,6 +67,7 @@ ignore = [
     "D407",
     "D412",
     "D415",
+    "RUF022",
     "S311",
     "SIM102",
     "SIM105",
