--- a/.github/workflows/sphinx_deploy.yml
+++ b/.github/workflows/sphinx_deploy.yml
@@ -4,7 +4,8 @@ name: Deploy Docs
 on:
   # Triggers the workflow on push events for main
   push:
-    branches: [main]
+    branches:
+      - main
 
   # Allows workflow to be manually run from the Actions tab
   workflow_dispatch:
