--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: Test
 
 on:
   push:
@@ -7,13 +7,12 @@ on:
   pull_request:
     branches: 
       - main
-      - release-*
 
   # Allows workflow to be manually run from the Actions tab
   workflow_dispatch:
         
 jobs:
-  test:
+  pytest:
 
     runs-on: ubuntu-latest
     strategy:
