Additional mypy checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ omit = [
 disallow_untyped_defs = true
 exclude = ['venv/', 'docs/', 'tests/', 'setup.py']
 disable_error_code = 'import-untyped, import-not-found'
+strict_equality = true
+extra_checks = true
+check_untyped_defs = true
 
 [[tool.mypy.overrides]]
 module = "thewalrus.*, drawsvg.*, scipy.*, scipy.*.stats.*"
