--- a/.github/workflows/sphinx_deploy.yml
+++ b/.github/workflows/sphinx_deploy.yml
@@ -6,6 +6,8 @@ on:
   push:
     branches:
       - main
+  schedule:
+    - cron: '0 0 2 1 *'
 
   # Allows workflow to be manually run from the Actions tab
   workflow_dispatch:
