--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ omit = [
 
 ## mypy config
 [tool.mypy]
+files = "lightworks"
 disallow_untyped_defs = true
 exclude = ['venv/', 'docs/', 'tests/', 'setup.py']
 disable_error_code = 'import-untyped, import-not-found'
@@ -92,7 +93,7 @@ line-ending = "auto"
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["PERF", "ANN", "S101"]
 "__init__.py" = ["F401", "F403"]
-"docs/*" = ["CPY001", "ANN", "D", "E731", "T201"]
+"docs/*" = ["ANN", "B905", "CPY001", "D", "E731", "T201"]
 "docs/source/tutorials/qubit.ipynb" = ["E402"]
 
 [tool.ruff.lint.flake8-pytest-style]
