--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,9 +33,10 @@ strict_equality = true
 extra_checks = true
 check_untyped_defs = true
 
+disallow_any_generics = true
+disallow_incomplete_defs = true
 disallow_subclassing_any = true
 disallow_untyped_decorators = true
-disallow_incomplete_defs = true
 disallow_untyped_defs = true
 
 [[tool.mypy.overrides]]
