--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches: 
       - main
+  schedule:
+    - cron: '0 8 1,15 * *'
 
   # Allows workflow to be manually run from the Actions tab
   workflow_dispatch:
