--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,8 @@ pandas-stubs
 numpy>=1.24.3
 multimethod>=1.11.2
 qiskit[visualization]>=1.1.0
-bayesian-optimization>=1.4.3
 drawsvg>=2.3.0
-zoopt>=0.4.2
+sympy>=1.12.0
 pyarrow
 ipython
 sphinx
