--- a/.github/workflows/python_publish.yml
+++ b/.github/workflows/python_publish.yml
@@ -35,3 +35,34 @@ jobs:
       
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@release/v1.8
+
+
+  update_citation:
+
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.PAT }}
+    
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.x'
+
+    - name: Install lightworks
+      run: | 
+          python -m pip install --upgrade pip
+          pip install .
+
+    - name: Update citation file
+      run: |
+          python .github/workflows/update_citation.py
+
+    - uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        commit_message: Update CITATION.ff file
+        
