--- a/.github/workflows/python_publish.yml
+++ b/.github/workflows/python_publish.yml
@@ -64,5 +64,5 @@ jobs:
 
     - uses: stefanzweifel/git-auto-commit-action@v5
       with:
-        commit_message: Update CITATION.ff file
+        commit_message: Update CITATION.cff file
         
