--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -7,6 +7,9 @@ on:
 
   # Allows workflow to be manually run from the Actions tab
   workflow_dispatch:
+
+permissions:
+  contents: read
         
 jobs:
   formatting:
