--- a/.github/workflows/sphinx_build.yml
+++ b/.github/workflows/sphinx_build.yml
@@ -10,6 +10,9 @@ on:
   # Allows workflow to be manually run from the Actions tab
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 # Define build job
 jobs: 
 
