--- a/.github/workflows/sphinx_deploy.yml
+++ b/.github/workflows/sphinx_deploy.yml
@@ -12,6 +12,9 @@ on:
   # Allows workflow to be manually run from the Actions tab
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 # Define build job
 jobs: 
 
