--- a/.github/workflows/python_publish.yml
+++ b/.github/workflows/python_publish.yml
@@ -47,6 +47,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         token: ${{ secrets.PAT }}
+        ref: ${{ github.head_ref }}
     
     - name: Set up Python
       uses: actions/setup-python@v5
