--- a/.github/workflows/python_publish.yml
+++ b/.github/workflows/python_publish.yml
@@ -34,7 +34,7 @@ jobs:
       run: python -m build
       
     - name: Publish package
-      uses: pypa/gh-action-pypi-publish@release/v1.8
+      uses: pypa/gh-action-pypi-publish@release/v1.12
 
 
   update_citation:
@@ -47,7 +47,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         token: ${{ secrets.PAT }}
-        ref: ${{ github.head_ref }}
+        ref: main
     
     - name: Set up Python
       uses: actions/setup-python@v5
