--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pandas-stubs
 numpy>=1.24.3
 multimethod>=1.11.2
 qiskit[visualization]>=1.1.0
-drawsvg[raster]>=2.3.0
+drawsvg>=2.3.0
 sympy>=1.12.0
 pyarrow
 ipython
