--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,7 +49,8 @@ jobs:
       - name: Install dependencies
         run: | 
             python -m pip install --upgrade pip
-            pip install -r requirements.txt
+            pip install uv
+            uv pip install -r requirements.txt --active
 
       # Run with pytest
       - name: Test with pytest
