--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,7 +50,7 @@ jobs:
         run: | 
             python -m pip install --upgrade pip
             pip install uv
-            uv pip install -r requirements.txt --active
+            uv pip install -r requirements.txt --system
 
       # Run with pytest
       - name: Test with pytest
