--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -30,7 +30,8 @@ jobs:
       - name: Install dependencies
         run: | 
             python -m pip install --upgrade pip
-            pip install -r requirements.txt
+            pip install uv
+            uv pip install -r requirements.txt --system
 
       # Formatting check
       - name: Check formatting with ruff
