--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,10 @@ on:
 permissions:
   contents: read
   pull-requests: write
-        
+     
+env:
+  COV_PY_VER: "3.11"
+
 jobs:
   pytest:
 
@@ -46,16 +49,23 @@ jobs:
       - name: Install dependencies
         run: | 
             python -m pip install --upgrade pip
-            pip install -r requirements.txt
+            pip install uv
+            uv pip install -r requirements.txt --system
 
       # Run with pytest
       - name: Test with pytest
+        if: ${{ ! (matrix.python-version == env.COV_PY_VER && matrix.os == 'ubuntu-latest' && github.event_name == 'pull_request') }}
+        run: |
+            pytest
+        
+      - name: Test with pytest & coverage
+        if: ${{ matrix.python-version == env.COV_PY_VER && matrix.os == 'ubuntu-latest' && github.event_name == 'pull_request' }}
         run: |
             pytest --junitxml=report.xml --cov --cov-report=term-missing:skip-covered --cov-report xml:coverage.xml
 
       # Add comment to PR with coverage report
       - name: Pytest coverage comment
-        if: ${{ matrix.python-version == '3.11'  && github.event_name == 'pull_request' }} 
+        if: ${{ matrix.python-version == env.COV_PY_VER && matrix.os == 'ubuntu-latest' && github.event_name == 'pull_request' }} 
         uses: MishaKav/pytest-coverage-comment@main
         with:
           junitxml-path: ./report.xml
