--- a/.github/workflows/sphinx_build.yml
+++ b/.github/workflows/sphinx_build.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Build HTML
         run: | 
           cd docs/
-          make html --nitpicky --fail-on-warning
+          make html SPHINXOPTS="--nitpicky --fail-on-warning"
