--- a/.github/workflows/sphinx_build.yml
+++ b/.github/workflows/sphinx_build.yml
@@ -47,4 +47,4 @@ jobs:
       - name: Build HTML
         run: | 
           cd docs/
-          make html
+          make html SPHINXOPTS="--fail-on-warning"
